# simple_openai

./: Cargo.toml  README.md
src/: cache.rs  errors.rs  lib.rs  openai.rs  utils.rs
