[package]
name = "simple_openai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.9"
hyper = { version = "0.14.27", features = ["full"] }
hyper-tls = "0.5.0"
serde = "1.0.164"
serde_derive = "1.0.164"
serde_json = "1.0.99"
