[package]
name = "simple_openai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
full = { version = "0.1.0", optional = true }
http = "0.2.9"
http-body = "1.0.0"
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["full"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.3", features = ["full"] }
serde = "1.0.164"
serde_derive = "1.0.164"
serde_json = "1.0.99"
tempfile = "3.10.1"
tokio = { version = "1.21.2", features = ["full"] }

