[package]
name = "simple_openai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "*"
full = { version = "0.1.0", optional = true }
http = "*"
http-body = "*"
http-body-util = "*"
hyper = { version = "*", features = ["full"] }
hyper-tls = "*"
hyper-util = { version = "*", features = ["full"] }
serde = "*"
serde_derive = "*"
serde_json = "*"
tempfile = "*"
tokio = { version = "*", features = ["full"] }

